--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,18 @@
       <version>5.7.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.3.20</version>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.1.212</version>
+<!--      <scope>provided</scope>-->
+    </dependency>
+
   </dependencies>
 
   <build>
