--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,16 @@
       <version>2.1.212</version>
 <!--      <scope>provided</scope>-->
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+    </dependency>
 
   </dependencies>
 
