--- a/MyBookShopAPP/src/main/resources/application.properties
+++ b/MyBookShopAPP/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.messages.basename=lang.messages
