--- a/MyBookShopAPP/src/main/resources/application.properties
+++ b/MyBookShopAPP/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.messages.basename=lang.messages
+spring.web.resources.static-locations=classpath:/spring-frontend/
+spring.thymeleaf.prefix=classpath:/spring-frontend/
+spring.sql.init.data-locations=classpath:data.sql,classpath:authors.sql
+spring.sql.init.schema-locations=classpath:schema.sql
