--- a/MyBookShopAPP/src/main/resources/application.yml
+++ b/MyBookShopAPP/src/main/resources/application.yml
@@ -15,20 +15,23 @@ spring:
     username: postgres
     password: 123
     driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
       ddl-auto: validate
-    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
-    show-sql: true
-#
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    show-sql: true
+#    defer-datasource-initialization: false
+  #
 #    properties:
 #      hibernate:
 #        dialect: org.hibernate.dialect.PostgreSQL11Dialect
+#  sql:
 #    init:
-#      data-locations: classpath:data.sql,classpath:authors.sql
 #      mode: always
 
   liquibase:
     enabled: true
     change-log: db/changelog/db.changelog-master.yaml
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
