--- a/MyBookShopAPP/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/MyBookShopAPP/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
-#  - include:
-#      file: liquibase-outputChangeLog_init.yaml
-#      relativeToChangelogFile: true
-#  - include:
-#      file: changeset/create-ex-table.yaml
-#      relativeToChangelogFile: true
+  - include:
+      file: changeset/liquibase-outputChangeLog.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: changeset/add-fields-booksTable.yaml
+      relativeToChangelogFile: true
