task 7.3(ERROR HANDLING)

--- a/MyBookShopAPP/src/main/resources/application.yml
+++ b/MyBookShopAPP/src/main/resources/application.yml
@@ -37,3 +37,5 @@ spring:
       matching-strategy: ant_path_matcher
 upload:
   path: D:/Spring modul/covers
+download:
+  path: D:/Spring modul/books-file
