--- a/MyBookShopAPP/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/MyBookShopAPP/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: changeset/add-fields-booksTable.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changeset/add-column-bookId-bookFileTable.yaml
+      relativeToChangelogFile: true
