task 8.3 spring security

--- a/MyBookShopAPP/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/MyBookShopAPP/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -17,3 +17,12 @@ databaseChangeLog:
   - include:
       file: changeset/add-sqlInsert-table-book_review.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changeset/modifyDataType-table-users_contact.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: changeset/add-defaultValue-table-user_contact-column-code_time.yaml
+      relativeToChangelogFile: true
+#  - include:
+#      file: changeset/add-defaultValue-table-users-column-reg_time.yaml
+#      relativeToChangelogFile: true
