--- a/MyBookShopAPP/src/main/resources/application.yml
+++ b/MyBookShopAPP/src/main/resources/application.yml
@@ -9,7 +9,10 @@ spring:
       static-locations: classpath:/frontend/
   thymeleaf:
     prefix: classpath:/frontend/
-
+  security:
+    user:
+      name: admin
+      password: 123
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
@@ -17,7 +20,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 #    show-sql: true
 #    defer-datasource-initialization: false
